# cycling-fantasy-league-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  docker-build.yml  docker-lint.yml  docker-publish.yml  lint.yml  security.yml  tests.yml  type-check.yml
alembic/: env.py  script.py.mako
alembic/versions/: __init__.py
config/: deploy.yml
grafana/provisioning/datasources/: loki.yml
requirements/: base.txt  dev.txt  prod.txt
src/: main.py
src/procycling_scraper/analysis/application/: process_cyclists_use_case.py
src/procycling_scraper/analysis/application/dto/: analysis_dtos.py  cyclist_dto.py
src/procycling_scraper/analysis/domain/: rider_matching_service.py  value_score_calculator.py
src/procycling_scraper/analysis/infrastructure/api/: main.py
src/procycling_scraper/scraping/application/: scrape_year_use_case.py
src/procycling_scraper/scraping/application/dto/: scraped_race_data.py
src/procycling_scraper/scraping/application/ports/: race_data_scraper.py  race_list_scraper.py
src/procycling_scraper/scraping/domain/entities/: classification.py  (+2 more)
src/procycling_scraper/shared/: logging_config.py
tests/analysis/application/: test_rider_matching_service.py
tests/analysis/domain/: test_value_score_calculator.py
tests/scraping/domain/: test_entities_and_value_objects.py
tests/scraping/infrastructure/scrapers/: test_race_data_scraper_parsing.py  test_race_list_scraper_parsing.py
(+8 files in other folders)
