[project]
name = "procycling_scraper"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["procycling_scraper"]

[tool.mypy]
python_version = "3.8"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.(py|pyi)$'
exclude = '''/(\.git|\.mypy_cache|\.pytest_cache|\.venv|build|dist)/'''

[tool.isort]
profile = "black"
line_length = 88
py_version = 38
known_first_party = ["procycling_scraper"]
combine_as_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = { "**/__init__.py" = ["F401"] }